--- a/index.html
+++ b/index.html
@@ -10,10 +10,20 @@
 
 <body>
     <header>
-        <nav>
+        <section id="navbar">
             <div id="logo">Logo</div>
-
-        </nav>
+            <nav>
+                <a href="#accueil">Accueil</a>
+                <a href="#avantages">Avantages</a>
+                <a href="#produits">Produits</a>
+                <a href="#services">Services</a>
+                <a href="#temoignages">Témoignages</a>
+            </nav>
+            <button>Appeler</button>
+        </section>
+        <section id="banner">
+            <div class="textCenter"></div>
+        </section>
     </header>
 
     <script src="script.js"></script>
