Ajout section avantages

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
     <header>
         <section id="navbar">
-            <div id="logo">Logo</div>
+            <div id="logo">TouBon</div>
             <nav>
                 <a href="#accueil">Accueil</a>
                 <a href="#avantages">Avantages</a>
@@ -21,10 +21,21 @@
             </nav>
             <button>Appeler</button>
         </section>
-        <section id="banner">
-            <div class="textCenter"></div>
-        </section>
+        <section id="banner"></section>
     </header>
+
+    <main>
+        <section id="advantages">
+            <div class="container">
+                <div id="text-advantages">
+                    <p>Pourquoi</p>
+                    <h2>Ce qui nous définit</h2>
+                    <p>Qualité sans égale dans chaque détail</p>
+                </div>
+                <div class="card-container"></div>
+            </div>
+        </section>
+    </main>
 
     <script src="script.js"></script>
 </body>
