Realisation des sections services et témoignages

--- a/index.html
+++ b/index.html
@@ -27,12 +27,40 @@
     <main>
         <section id="advantages">
             <div class="container">
-                <div id="text-advantages">
+                <div class="text-center">
                     <p>Pourquoi</p>
                     <h2>Ce qui nous définit</h2>
                     <p>Qualité sans égale dans chaque détail</p>
                 </div>
-                <div class="card-container"></div>
+                <div id="card-advantages-container"></div>
+            </div>
+        </section>
+        <section id="products">
+            <div class="container">
+                <div class="text-center">
+                    <p>Produits</p>
+                    <h2>Gâteaux</h2>
+                    <p>Les patisseries qui font la différence cette saison</p>
+                </div>
+                <div id="card-products-container"></div>
+            </div>
+        </section>
+        <section id="services">
+            <div class="container">
+                <div class="text-center">
+                    <p>Services</p>
+                    <h2>Vos gâteaux, vos goûts</h2>
+                </div>
+                <div id="card-services-container"></div>
+            </div>
+        </section>
+        <section id="vouch">
+            <div class="container">
+                <div class="text-center">
+                    <p>Ils parlent</p>
+                    <h2>Ce que nos clients pensent vraiment</h2>
+                </div>
+                <div id="card-vouch-container"></div>
             </div>
         </section>
     </main>
