--- a/index.html
+++ b/index.html
@@ -4,20 +4,21 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>TouBon - Pâtisserie</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
 </head>
 
 <body>
     <header>
         <section id="navbar">
-            <div id="logo">TouBon</div>
+            <div class="logo">TouBon</div>
             <nav>
                 <a href="#accueil">Accueil</a>
                 <a href="#avantages">Avantages</a>
                 <a href="#produits">Produits</a>
                 <a href="#services">Services</a>
-                <a href="#temoignages">Témoignages</a>
+                <a href="#vouch">Témoignages</a>
             </nav>
             <button>Appeler</button>
         </section>
@@ -64,6 +65,19 @@
             </div>
         </section>
     </main>
+
+    <footer>
+        <div>
+            <div id="logo">TouBon</div>
+            <div>
+                <i class="fa-brands fa-facebook"></i>
+                <i class="fa-brands fa-instagram"></i>
+                <i class="fa-brands fa-twitter"></i>
+                <i class="fa-brands fa-linkedin"></i>
+                <i class="fa-brands fa-youtube"></i>
+            </div>
+        </div>
+    </footer>
 
     <script src="script.js"></script>
 </body>
