--- a/index.html
+++ b/index.html
@@ -7,6 +7,11 @@
     <title>TouBon - Pâtisserie</title>
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link
+        href="https://fonts.googleapis.com/css2?family=DM+Sans:ital,opsz,wght@0,9..40,100..1000;1,9..40,100..1000&family=Open+Sans:ital,wght@0,300..800;1,300..800&family=Roboto:ital,wght@0,100..900;1,100..900&display=swap"
+        rel="stylesheet">
 </head>
 
 <body>
@@ -14,9 +19,9 @@
         <section id="navbar">
             <div class="logo">TouBon</div>
             <nav>
-                <a href="#accueil">Accueil</a>
-                <a href="#avantages">Avantages</a>
-                <a href="#produits">Produits</a>
+                <a href="#banner">Accueil</a>
+                <a href="#advantages">Avantages</a>
+                <a href="#products">Produits</a>
                 <a href="#services">Services</a>
                 <a href="#vouch">Témoignages</a>
             </nav>
@@ -67,14 +72,34 @@
     </main>
 
     <footer>
-        <div>
-            <div id="logo">TouBon</div>
-            <div>
-                <i class="fa-brands fa-facebook"></i>
-                <i class="fa-brands fa-instagram"></i>
-                <i class="fa-brands fa-twitter"></i>
-                <i class="fa-brands fa-linkedin"></i>
-                <i class="fa-brands fa-youtube"></i>
+        <div class="container">
+            <div id="informations">
+                <div>
+                    <div class="logo">TouBon</div>
+                    <div>
+                        <i class="fa-brands fa-facebook"></i>
+                        <i class="fa-brands fa-instagram"></i>
+                        <i class="fa-brands fa-twitter"></i>
+                        <i class="fa-brands fa-linkedin"></i>
+                        <i class="fa-brands fa-youtube"></i>
+                    </div>
+                </div>
+                <div id="navbar2">
+                    <a href="#banner">Accueil</a>
+                    <a href="#advantages">Avantages</a>
+                    <a href="#products">Produits</a>
+                    <a href="#services">Services</a>
+                    <a href="#vouch">Témoignages</a>
+                </div>
+            </div>
+            <div id="company-name">TouBon</div>
+            <div id="bottomPage">
+                <div id="copyright">© 2025 Dashboard Navigation. Tous droits réservés</div>
+                <div id="settings">
+                    <a href="">Politique de confidentialité</a>
+                    <a href="">Conditions d'utilisation</a>
+                    <a href="">Paramètres de cookies</a>
+                </div>
             </div>
         </div>
     </footer>
