--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
     <footer>
         <div class="container">
             <div id="informations">
-                <div>
+                <div id="contact">
                     <div class="logo">TouBon</div>
                     <div>
                         <i class="fa-brands fa-facebook"></i>
